# everyCCNote

./: CMakeLists.txt  calc.cpp  calc.h  hello.cpp  study.c
src/: CMakeLists.txt  uploadFile.c  uploadFile.h
